added transcode configs for nvenc,qsv and vaapi
