# server/immich-openapi-specs.json
@@ -6364,6 +6364,9 @@
           "transcode": {
             "$ref": "#/components/schemas/TranscodePolicy"
           },
+          "accel": {
+            "$ref": "#/components/schemas/TranscodeHWAccel"
+          },
           "preset": {
             "type": "string"
           },
@@ -6383,6 +6386,7 @@
           "targetVideoCodec",
           "targetAudioCodec",
           "transcode",
+          "accel",
           "preset",
           "targetResolution",
           "maxBitrate",
@@ -6604,6 +6608,15 @@
         "enum": [
           "day",
           "month"
+        ]
+      },
+      "TranscodeHWAccel": {
+        "type": "string",
+        "enum": [
+          "nvenc",
+          "qsv",
+          "vaapi",
+          "disabled"
         ]
       },
       "TranscodePolicy": {
